# fps-demo

./: Cargo.toml
renderer/: Cargo.toml
renderer/src/: camera.rs  common.rs  lib.rs  render_pass_exec.rs  renderer.rs  rendering_context.rs  scene.rs  vertex.rs
renderer/src/primitives/: mod.rs  triangle.rs
renderer/src/primitives/shaders/: shader.wgsl
src/: main.rs  renderer.rs
