[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
nalgebra = "0.32.3"
pollster = "0.3.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
wgpu = "0.18.0"
winit = { version="0.27.3", features = ["wayland"]}
